Improve 1 J'ai ajouté les pages liste des factures d'un client et coutures, cloturer une couture. et le style de print.css. J'ai fait la partie vitrine pour aprpos et licence.

--- a/app/Resources/views/menu.html.twig
+++ b/app/Resources/views/menu.html.twig
@@ -10,7 +10,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="{{ path('vitrineIndex') }}"><img src="{{ asset('images/LOGO.png') }}" /></a>
+                        <a class="navbar-brand" href="{{ path('vitrineIndex') }}"><img src="{{ asset('images/LOGO.png') }}" title="TBSS - Couture " alt="TBSS - Couture "/></a>
                     </div>
                     <div class="navbar-collapse collapse">
                         <ul class="nav navbar-nav">
