--- a/src/Couture/VitrineBundle/Resources/views/Vitrine/apropos.html.twig
+++ b/src/Couture/VitrineBundle/Resources/views/Vitrine/apropos.html.twig
@@ -1,31 +1,39 @@
 {% extends "::base.html.twig" %}
 
-{% block title %}A propos{% endblock %}
+{% block title %}Gest'Couture | A propos{% endblock %}
 
 {% block page %}
 
-<h1>L'application Gest'Couture</h1>
+<div class="row">
+        <div class="span12 alert alert-success"><h1 class="titre">L'application Gest'Couture </h1></div>
+    </div>
+<div class="licence">
+    
+    <div class='row'>
 
-<p>L'application Gest'Couture est faite pour les PME qui veulent informatiser leur structure, et qui sont dans le domaine de la haute Couture. Cette application contient les modules de :</p>
+<p>L'application Gest'Couture est faite pour les PME qui veulent informatiser leur structure, et qui sont dans le domaine de la haute Couture. Cette application contient  :</p>
 <ul>
     <li>
     Un tableau de bord : qui montre les statistiques, les performances de votre PME. L'évolution du nombre de coutures fait par votre entreprise dans la journée, la semaine, l'année, ...
     </li>
     <li>
-    Gestion des Clients :
+    Un module de Gestion des Clients :
     </li>
     <li>
       
-    Gestion des Modèles :
+    Un module de Gestion des Modèles :
     </li>
     <li>
-    Gestion des 'Coutures':
+    Un module de Gestion des 'Coutures':
     </li>
     <li>
-    La facturation
+    Un module de La facturation
     </li>
     <li>
-    La gestion des Employés:
+    Un module de gestion des Employés:
+    </li>
+    <li>
+    Et l'administration pour la gestion des utilisateurs.
     </li>
     <li>
     ...
@@ -46,5 +54,7 @@
 
     <li>tbss@touba-bss.com</li>
     </ul>
+    </div>
+    </div>
 
 {% endblock %}
