--- a/src/Couture/FacturationBundle/Resources/views/Facture/index.html.twig
+++ b/src/Couture/FacturationBundle/Resources/views/Facture/index.html.twig
@@ -63,7 +63,7 @@ Facturation
     <table class="table table-striped table-condensed">
     <thead>
         <tr>
-            <th>Id</th>
+            <th>N°</th>
             <!--ajouter par mseye: la colonne couture -->
             <th>Couture</th>
             
@@ -72,26 +72,43 @@ Facturation
             <th>Datec</th>
             <th>Iduser</th-->
             <th>Avance</th>
+            <th>Etat</th>
             <th>{{ 'views.index.actions'|trans({}, 'JordiLlonchCrudGeneratorBundle') }}</th>
         </tr>
     </thead>
     <tbody>
     {% for entity in entities %}
         <tr>
-            <td><a href="{{ path('facture_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
+            <td><a href="{{ path('facture_show', { 'id': entity.id }) }}">{{ entity.couture.client.id }}{{entity.id}}-{{ entity.date|date('my') }}</a></td>
             <td>{% if entity.couture %}{{ entity.couture.getInfosCouture() }}{% endif %}</td>
             <td>{% if entity.date %}{{ entity.date|date('d M Y') }}{% endif %}</td>
             <!--td>{% if entity.datemod %}{{ entity.datemod|date('Y-m-d H:i:s') }}{% endif %}</td>
             <td>{% if entity.datec %}{{ entity.datec|date('Y-m-d H:i:s') }}{% endif %}</td>
             <td>{{ entity.iduser }}</td-->
             <td>{{ entity.avance }}</td>
+            <td>{{ entity.etatfacture.libelle }}</td>
             <td>
-        <a class="btn btn-mini" href="{{ path('facture_show', { 'id': entity.id }) }}">
+        <a class="btn btn-inverse" href="{{ path('facture_show', { 'id': entity.id }) }}">
             {{ 'views.actions.show'|trans({}, 'JordiLlonchCrudGeneratorBundle') }}
         </a>
-        <a class="btn btn-mini" href="{{ path('facture_edit', { 'id': entity.id }) }}">
+        <a class="btn btn-inverse" href="{{ path('facture_edit', { 'id': entity.id }) }}">
             {{ 'views.actions.edit'|trans({}, 'JordiLlonchCrudGeneratorBundle') }}
-        </a>            </td>
+        </a>
+        {% if entity.etatfacture.libelle == 'Initial'  %}  
+            <a class="btn btn-info" href="{{ path('valider_facture', { 'id': entity.id, 'destination': 'facture' }) }}">
+                Valider
+            </a>
+            <a class="btn btn-success" href="{{ path('regler_facture', { 'id': entity.id, 'destination': 'facture' }) }}">
+                Régler
+            </a>
+        {% else %}
+            {% if entity.etatfacture.libelle == 'Validé'  %} 
+                <a class="btn btn-success" href="{{ path('regler_facture', { 'id': entity.id, 'destination': 'facture'  }) }}">
+                Régler
+                </a>
+            {% endif %} 
+        {% endif %} 
+                     </td>
         </tr>
     {% endfor %}
     </tbody>
