--- a/src/Couture/VitrineBundle/Resources/views/Vitrine/index.html.twig
+++ b/src/Couture/VitrineBundle/Resources/views/Vitrine/index.html.twig
@@ -4,12 +4,53 @@
         <link href="{{ asset ('css/gallery/galleriffic-2.css') }}" type="text/css" rel="stylesheet" />
 {% endblock %}
 
-{% block title %}CoutureVitrineBundle:Vitrine:index{% endblock %}
+{% block title %}Vitrine{% endblock %}
 
 {% block page %}
-<h1>Welcome to the Vintrine:index page</h1>
+<div class="row">
+        <div class="span12 alert alert-success"><h1 class="titre">Gest'Couture de TBSS </h1></div>
+    </div>
+
+<div class='row'>
+    <div class="span2 float-right">
+        {% if form_errors(filterForm) %}
+        <div class="alert alert-block alert-error fade in form-errors">
+            {{ form_errors(filterForm) }}
+        </div>
+        {% endif %}
+        &nbsp;
+    </div>
+    <div class="span2">
+        <div class="filters-right">
+            <a class="btn dropdown-toggle" data-toggle="collapse" data-target="#filters">
+                {{ 'views.index.filters'|trans({}, 'JordiLlonchCrudGeneratorBundle') }}
+                <span class="caret"></span>
+            </a>
+        </div>
+    </div>
+
+    <div class="span5">
+        <div id="filters" class="collapse">
+            {% form_theme filterForm with ['CoutureClientBundle:Client:perso_input_bootstrap.html.twig'] %}
+            <form class="well" action="{{ path('vitrineIndex') }}" method="get" {{ form_enctype(filterForm) }}>
+                
+                {#{ form_row(filterForm.libelle) }#}
+                
+                
+                {{ form_rest(filterForm) }}
+
+                <p>
+                    <button type="submit" name="filter_action" value="filter">{{ 'views.index.filter'|trans({}, 'JordiLlonchCrudGeneratorBundle') }}</button>
+                    <button type="submit" name="filter_action" value="reset">{{ 'views.index.reset'|trans({}, 'JordiLlonchCrudGeneratorBundle') }}</button>
+                </p>
+            </form>
+        </div>
+    </div>
+                </div>
+
 
 <div class="row">
+    
     <div class="col-sm-4">
         <div class="row">
             
@@ -19,8 +60,8 @@
                 {% for entity in entities %}
                     <div class="col-sm-4">
                 
-                    <a class="modele-thumbnail" data-source="{{ asset (entity.image.getWebPath()) }}" title="Title #0">
-                        <img style = "height: 160px !important;"  class="img-responsive img-thumbnail" src="{{ asset (entity.image.getWebPath()) }}" alt="Title #0" />
+                    <a class="modele-thumbnail" data-source="{{ asset (entity.image.getWebPath()) }}" title="{{ entity.libelle }}">
+                        <img style = "height: 160px !important;"  title="{{ entity.libelle }}" alt="{{ entity.libelle }}"class="img-responsive img-thumbnail" src="{{ asset (entity.image.getWebPath()) }}" alt="Title #0" />
                     </a>
                     
                 </div>
@@ -55,60 +96,6 @@
         {{ parent() }} 
         <script src="{{ asset('./js/jquery.galleriffic.js') }}"></script>
         
-        <script>
-        jQuery(document).ready(function($) {
-				// We only want these styles applied when javascript is enabled
-				$('div.navigation').css({'width' : '300px', 'float' : 'left'});
-				$('div.content').css('display', 'block');
-
-				// Initially set opacity on thumbs and add
-				// additional styling for hover effect on thumbs
-				var onMouseOutOpacity = 0.67;
-				$('#thumbs ul.thumbs li').opacityrollover({
-					mouseOutOpacity:   onMouseOutOpacity,
-					mouseOverOpacity:  1.0,
-					fadeSpeed:         'fast',
-					exemptionSelector: '.selected'
-				});
-				
-				// Initialize Advanced Galleriffic Gallery
-				var gallery = $('#thumbs').galleriffic({
-					delay:                     2500,
-					numThumbs:                 15,
-					preloadAhead:              10,
-					enableTopPager:            true,
-					enableBottomPager:         true,
-					maxPagesToShow:            7,
-					imageContainerSel:         '#slideshow',
-					controlsContainerSel:      '#controls',
-					captionContainerSel:       '#caption',
-					loadingContainerSel:       '#loading',
-					renderSSControls:          true,
-					renderNavControls:         true,
-					playLinkText:              'Play Slideshow',
-					pauseLinkText:             'Pause Slideshow',
-					prevLinkText:              '&lsaquo; Previous Photo',
-					nextLinkText:              'Next Photo &rsaquo;',
-					nextPageLinkText:          'Next &rsaquo;',
-					prevPageLinkText:          '&lsaquo; Prev',
-					enableHistory:             false,
-					autoStart:                 false,
-					syncTransitions:           true,
-					defaultTransitionDuration: 900,
-					onSlideChange:             function(prevIndex, nextIndex) {
-						// 'this' refers to the gallery, which is an extension of $('#thumbs')
-						this.find('ul.thumbs').children()
-							.eq(prevIndex).fadeTo('fast', onMouseOutOpacity).end()
-							.eq(nextIndex).fadeTo('fast', 1.0);
-					},
-					onPageTransitionOut:       function(callback) {
-						this.fadeTo('fast', 0.0, callback);
-					},
-					onPageTransitionIn:        function() {
-						this.fadeTo('fast', 1.0);
-					}
-				});
-			});
-        </script>
+    
 
 {% endblock %}
