--- a/web/css/print.css
+++ b/web/css/print.css
@@ -19,7 +19,7 @@ div.span11:nth-child(4) > div:nth-child(1){
 .facture-table{
     display: block;
     width: 100%;
-    margin-top: -20px;
+    
 }
 
 .designation{
@@ -96,4 +96,26 @@ body > div.container > div:nth-child(2) > div .alert-success
 .titre
 {
     font-size: 1.6em;
+}
+
+.infos-client h1
+{
+    margin: auto;
+    padding: 0;
+    font-size: 1.8em;
+    border: transparent;
+}
+
+.infos-client fieldset
+{
+    padding: 0;
+    height: 100px;
+    width: 50%;
+    
+    
+}
+
+.row span5
+{
+    border: transparent;
 }
