--- a/web/css/spiderman.css
+++ b/web/css/spiderman.css
@@ -19,11 +19,15 @@ body{
 
 .background_infos .form-horizontal .control-label {
     float: left;
-    padding-top: 5px;
+    padding-top: 1px;
     text-align: left;
 /*    width: 0px;*/
 }
 
+.background_infos .panel-body
+{
+    margin-bottom: 18px;
+}
 .titre
 {
     text-align: center;
