--- a/src/Couture/FacturationBundle/Resources/views/Facture/index.html.twig
+++ b/src/Couture/FacturationBundle/Resources/views/Facture/index.html.twig
@@ -103,9 +103,17 @@ Facturation
             </a>
         {% else %}
             {% if entity.etatfacture.libelle == 'Validé'  %} 
+                <a class="btn btn-danger" href="{{ path('devalider_facture', { 'id': entity.id, 'destination': 'facture_show' }) }}">
+                    Dévalider
+                </a>
                 <a class="btn btn-success" href="{{ path('regler_facture', { 'id': entity.id, 'destination': 'facture'  }) }}">
                 Régler
                 </a>
+            {% else %}
+                <a class="btn btn-danger" href="{{ path('devalider_facture', { 'id': entity.id, 'destination': 'facture_show' }) }}">
+                    Dévalider
+                </a>
+                
             {% endif %} 
         {% endif %} 
                      </td>
