Générer Facture ecriture de la route, methode genererAction pour les factures, il reste à préremplir le formulaire de création d'une facture.

--- a/src/Couture/FacturationBundle/Resources/views/Facture/index.html.twig
+++ b/src/Couture/FacturationBundle/Resources/views/Facture/index.html.twig
@@ -42,7 +42,8 @@ Facturation
                 {#{ form_row(filterForm.datemod) }}
                 {{ form_row(filterForm.datec) }}
                 {{ form_row(filterForm.iduser) }}
-                {{ form_row(filterForm.avance) }#}
+                {{ form_row(filterForm.avance) }}
+                {{ form_row(filterForm.etatfacture) }#}
                 {{ form_rest(filterForm) }}
 
                 <p>
