--- a/src/Couture/TailleurBundle/Resources/views/Tailleur/dashboard.html.twig
+++ b/src/Couture/TailleurBundle/Resources/views/Tailleur/dashboard.html.twig
@@ -15,8 +15,72 @@
             </tr>
         {% endfor %}
     </table>
+
+    <div>
+        <table id='myTable1'>
+            <caption>Nombre de coutures</caption>
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>Jan</th>
+                    <th>Feb</th>
+                    <th>Mar</th>
+                    <th>Apr</th>
+                    <th>May</th>
+                    <th>Jun</th>
+                    <th>Jul</th>
+                    <th>Aug</th>
+                    <th>Sep</th>
+                    <th>Oct</th>
+                    <th>Nov</th>
+                    <th>Dec</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th>2010</th>
+                    <td>125</td>
+                    <td>185</td>
+                    <td>327</td>
+                    <td>359</td>
+                    <td>376</td>
+                    <td>398</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>4</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <th>2009</th>
+                    <td>1167</td>
+                    <td>1110</td>
+                    <td>691</td>
+                    <td>165</td>
+                    <td>135</td>
+                    <td>157</td>
+                    <td>139</td>
+                    <td>136</td>
+                    <td>938</td>
+                    <td>1120</td>
+                    <td>55</td>
+                    <td>55</td>
+                </tr>
+            </tbody>
+        </table>
+
+    </div>
     
-        
-        
     
+
+
 {% endblock%}
+
+{% block javascript %}
+    {{ parent() }} 
+    <!--script type="text/javascript" src="http://www.google.com/jsapi"></script-->
+    <script src="{{ asset('./js/jsapi.js') }}"></script>
+    <script src="{{ asset('./js/jquery.gvChart-0.1.min.js') }}"></script>
+    <script src="{{ asset('./js/dashboard.js') }}"></script>
+{% endblock %}
